// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot 1`] = `
<AbstractList
  actions={
    Object {
      "getData": [MockFunction],
      "removeGroup": [MockFunction],
      "searchTeams": [MockFunction],
    }
  }
  data={
    Array [
      Object {
        "display_name": "DN",
        "id": "123",
      },
    ]
  }
  emptyListTextDefaultMessage="test"
  emptyListTextId="test"
  header={
    <React.Fragment>
      <div
        className="groups-list--global-actions"
      >
        <div
          className="group-list-search"
        >
          <input
            data-testid="search-input"
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <i
            className="fa fa-times-circle group-filter-action hidden"
            data-testid="clear-search"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="groups-list--header"
      >
        <div
          className="group-name adjusted"
        >
          <FormattedMessage
            defaultMessage="Name"
            id="admin.team_settings.team_list.nameHeader"
            values={Object {}}
          />
        </div>
        <div
          className="group-content"
        >
          <div
            className="group-description adjusted"
          >
            <FormattedMessage
              defaultMessage="Management"
              id="admin.team_settings.team_list.mappingHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-actions"
          />
        </div>
      </div>
    </React.Fragment>
  }
  key="0"
  onPageChangedCallback={[Function]}
  removeGroup={[MockFunction]}
  renderRow={[Function]}
  total={1}
/>
`;

exports[`admin_console/team_channel_settings/team/TeamList should match snapshot with paging 1`] = `
<AbstractList
  actions={
    Object {
      "getData": [MockFunction],
      "removeGroup": [MockFunction],
      "searchTeams": [MockFunction],
    }
  }
  data={
    Array [
      Object {
        "display_name": "DN0",
        "id": "id0",
      },
      Object {
        "display_name": "DN1",
        "id": "id1",
      },
      Object {
        "display_name": "DN2",
        "id": "id2",
      },
      Object {
        "display_name": "DN3",
        "id": "id3",
      },
      Object {
        "display_name": "DN4",
        "id": "id4",
      },
      Object {
        "display_name": "DN5",
        "id": "id5",
      },
      Object {
        "display_name": "DN6",
        "id": "id6",
      },
      Object {
        "display_name": "DN7",
        "id": "id7",
      },
      Object {
        "display_name": "DN8",
        "id": "id8",
      },
      Object {
        "display_name": "DN9",
        "id": "id9",
      },
      Object {
        "display_name": "DN10",
        "id": "id10",
      },
      Object {
        "display_name": "DN11",
        "id": "id11",
      },
      Object {
        "display_name": "DN12",
        "id": "id12",
      },
      Object {
        "display_name": "DN13",
        "id": "id13",
      },
      Object {
        "display_name": "DN14",
        "id": "id14",
      },
      Object {
        "display_name": "DN15",
        "id": "id15",
      },
      Object {
        "display_name": "DN16",
        "id": "id16",
      },
      Object {
        "display_name": "DN17",
        "id": "id17",
      },
      Object {
        "display_name": "DN18",
        "id": "id18",
      },
      Object {
        "display_name": "DN19",
        "id": "id19",
      },
      Object {
        "display_name": "DN20",
        "id": "id20",
      },
      Object {
        "display_name": "DN21",
        "id": "id21",
      },
      Object {
        "display_name": "DN22",
        "id": "id22",
      },
      Object {
        "display_name": "DN23",
        "id": "id23",
      },
      Object {
        "display_name": "DN24",
        "id": "id24",
      },
      Object {
        "display_name": "DN25",
        "id": "id25",
      },
      Object {
        "display_name": "DN26",
        "id": "id26",
      },
      Object {
        "display_name": "DN27",
        "id": "id27",
      },
      Object {
        "display_name": "DN28",
        "id": "id28",
      },
      Object {
        "display_name": "DN29",
        "id": "id29",
      },
    ]
  }
  emptyListTextDefaultMessage="test"
  emptyListTextId="test"
  header={
    <React.Fragment>
      <div
        className="groups-list--global-actions"
      >
        <div
          className="group-list-search"
        >
          <input
            data-testid="search-input"
            onChange={[Function]}
            onKeyUp={[Function]}
            placeholder="Search"
            type="text"
            value=""
          />
          <SearchIcon
            aria-hidden="true"
            className="search__icon"
            id="searchIcon"
          />
          <i
            className="fa fa-times-circle group-filter-action hidden"
            data-testid="clear-search"
            onClick={[Function]}
          />
        </div>
      </div>
      <div
        className="groups-list--header"
      >
        <div
          className="group-name adjusted"
        >
          <FormattedMessage
            defaultMessage="Name"
            id="admin.team_settings.team_list.nameHeader"
            values={Object {}}
          />
        </div>
        <div
          className="group-content"
        >
          <div
            className="group-description adjusted"
          >
            <FormattedMessage
              defaultMessage="Management"
              id="admin.team_settings.team_list.mappingHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-actions"
          />
        </div>
      </div>
    </React.Fragment>
  }
  key="0"
  onPageChangedCallback={[Function]}
  removeGroup={[MockFunction]}
  renderRow={[Function]}
  total={30}
/>
`;
